--- a/css/about.css
+++ b/css/about.css
@@ -1,44 +1,4 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-body{
-    min-height: 100vh; 
-    height: 100%;
-    margin: auto;  
-    background-color:#232A34 ;
-    background-size: cover;
 
-    /* #040706     #1F2235      #232A34 */
-
-}
-
-header{
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 22px;
-    width: 100%;
-    background-color: black;
-    
-    
-}
-
-.logo{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 1.9rem;
-    color: white;
-    cursor: pointer;
-    text-transform: capitalize;
-    font-weight: 700;
-    letter-spacing: 2px;
-    
-
-}
 main{
     display: grid;
     grid-template-columns: 1fr 2fr;
@@ -58,7 +18,7 @@ main{
     grid-column: span 1;
    
 }
-img{
+.imagess{
     width: 90%;
     padding-top: 1px;
     margin-left:  1.5em ;
@@ -72,7 +32,7 @@ img{
    
 }
 .About-me{
-    margin-top: 8rem;
+    margin-top: 4rem;
     margin-left: 4em;
     margin-right: 2em;
 }
@@ -101,6 +61,7 @@ img{
     justify-content: center;
     margin: 7px;
     margin-left: -7em;
+    text-transform: capitalize;
     
 
 }
@@ -108,17 +69,33 @@ img{
     padding-top: 10px;
     text-indent: 50px;
     color: white;
+    font-family: sans-serif;
+    border-radius: 25px;
     background-color:hsla(231, 70%, 5%, 0.384) ;
-    font-size: 19px;
+    /* font-size: 19px;
     
     border-radius: 15px;
     margin: 1.2em;
     padding-left: 10px;
     word-spacing: 2px;
     letter-spacing: 1px;
-    padding: 15px;
+    padding: 15px; */
+ 
+        padding: 25px;
+        margin: 25px;
+        font-size: 20px;
+        line-height: 1.5;
+        text-indent: 50px;
+        letter-spacing: 1.5px;
+        text-transform: full-width;
+        box-shadow: -10px -15px 5px rgb(61, 91, 116);
+        
+      
+            
+    
 
 }
+
 .my-skills h4{
     padding-top: 10px;
     margin-left: 50px;
@@ -128,18 +105,19 @@ img{
 }
 
 
- .More{
-    background-color:hsla(231, 70%, 5%, 0.384) ;
+.More {
+    background-color: hsl(231deg 82% 47% / 38%);
     font-size: 2.5rem;
     margin: 70%;
-    width: 50%;
-    padding: 25px;
-    border-radius: 15px;
+    /* width: 660%; */
+    padding: 20px;
+    border-radius: 25px;
     color: white;
     text-decoration: none;
 }
-.More :hover {
-    color: blue;
+
+ a:hover {
+    color:rgb(224, 64, 112);
 }
 
 
@@ -149,7 +127,7 @@ img{
     /* display: flex;justify-content: center; */
 
     align-items: center;
-    margin-left: 25em;
+    margin-left: 25rem;
     color: white;
     list-style-type: square;
     margin-bottom: -10px;
@@ -164,84 +142,86 @@ font-size: 20px;
 
 }
 
-
-.nav__bar{
-    list-style-type: none;
-   
-
-}
-.nav__bar--list{
-    display: inline;
-}
-.nav__bar--list a{
-    text-decoration: none;
-    padding: 0 1.4rem;
-    font-size: 1.8rem;
-    color: white;
-
-}
-.nav__bar--list a:hover{
-    color: rgb(218, 106, 106);
-}
-
-.container{
-    display: flex;
-    flex-direction: row;
-}
-footer{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    color: white;
-    margin-top: 10rem;
-
-}
-
-
-.Social-media h3{
-    font-size: 25px;
-    padding-left: 21px;
-    color: rgb(11, 176, 182);
-    
-}
-.social-media__icons{
- 
-  display: flex;
- justify-content: space-around;
- align-items: center;
- 
-}
-
-.email h3{
-    padding-left: 2em;
-    padding-bottom: 5px;
-    font-size: 1.4rem;
-    color: rgb(11, 176, 182);
-}
-.phone-number h3{
-    color:rgb(11, 176, 182); ;
-    padding-bottom: 5px;
-}
-.icon{
-    padding: 1px;
-    background-color: whitesmoke;
-    border-radius: 15px;
+@media (min-width:760px)and (max-width:912px){
+    hr{
+        display: none;
+    }
+    .imagess{
+        width: 150%;
+        margin-top: 150px;
+        margin-left: 1em;
+    }
+    .About-me__intro h2{
+        margin-left: 25%;
+        width: 60%;
+    }
+    .About-me__intro h3{
+        margin-left: 2em;
+    }
+    .About-me__intro p{
+        margin-top: 40px;
+        font-size: 15px;
+        margin-left: 60px;
+        width: fit-content;
+    }
+    .my-skills h4{
+        margin-left: 0px;
+        font-size: 30px;
+    }
+    .my-skills--sub{
+        font-size: 16px;
+        margin-left: 5rem;
+    }
+    .More{
+        font-size: 40px;
+        padding: 10px;
+        margin-top: 150px;
+    }
+    .image_about img {
+        max-width: 130%;
+    }
 }
 
 @media (max-width:450px){
     main{
         display: block;
+        grid-template-columns: 1fr;
     }
-    img{
-        margin: 4em;
+    .About-me{
+        grid-column: span 1;
+        width: 100%;
+        margin-left: 30px;
+       
+    }
+    .imagess{
+        width: 70%;
+        
+    }
+    .About-me__intro h2{
+        margin-left: 2%;
         width: 80%;
+        font-size: 2.1em;
+        padding-right: 5px;
+    }
+    .About-me__intro h3{
+        font-size: 1.2rem;
+        margin: 7px 7px 1px0;
     }
 }
 @media (max-width:320px){
-    img{
-        margin-left: 2em;
-        margin-top: 9em;
-        
-        width: 100%;
+    .About-me__intro p{
+        width: 80%;
+        height: 280px;
+        font-size: 13px;
+        margin-left: 1px;
+        margin-top: 15px;
+        font-family: sans-serif;
+
     }
+    
+    
 }
+
+
+
+
