--- a/css/my_services.css
+++ b/css/my_services.css
@@ -1,107 +1,46 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-body{
-    /* min-height: 100vh; 
-    height: 100%; */
-    margin: auto;  
-    background-color:#232A34 ;
-    background-size: cover;
 
-    /* #040706     #1F2235      #232A34 */
-
-}
-
-header{
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 22px;
-    width: 100%;
-    background-color: black;
-    
-    
-}
-
-.logo{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 1.9rem;
-    color: white;
-    cursor: pointer;
-    text-transform: capitalize;
-    font-weight: 700;
-    letter-spacing: 2px;
-    
-
-}
-
-
-.nav__bar{
-    list-style-type: none;
-   
-
-}
-.nav__bar--list{
-    display: inline;
-}
-.nav__bar--list a{
-    text-decoration: none;
-    padding: 0 1.4rem;
-    font-size: 1.8rem;
-    color: white;
-
-}
-.nav__bar--list a:hover{
-    color: rgb(218, 106, 106);}
-
-
-
-    .description{
-        color: white;
+    header{
+        position: static;
+    }
+    .service {
         display: flex;
-        justify-content: center;
-        margin-top: 5em;
-        margin-left: 12rem;
-        margin-right: 22rem;
-        border-radius: 10px;
-        padding: 10px;
-        font-size: 19px;
-        border: 4px solid hsla(231, 70%, 5%, 0.384);
-        background-color: hsla(230, 58%, 47%, 0.37);
-        font-weight: lighter;
-        line-height: 1.5rem;
-        letter-spacing: 0.5px;
+        align-items: center;
+        flex-direction: column;
+    }
+    .service-description{
+            margin: auto;
+            padding-top: 10px;
+            text-indent: 50px;
+            color: white;
+            font-family: sans-serif;
+            border-radius: 25px;
+            background-color: hsla(231, 70%, 5%, 0.384);
+            padding: 25px;
+            width: 80%;
+            font-size: 18px;
+            line-height: 1.5;
+            text-indent: 50px;
+            letter-spacing: 1.5px;
+            box-shadow: -10px -15px 5px rgba(61, 91, 116, 0.336); 
     }
     
     .service-title{
-        color: white;
-       
-        text-align: center;
-        width: 45%;
-        padding-top: 5px;
-        height: 125px;
-        border: 2px solid hsla(0, 0%, 3%, 0.384) ;
-        font-size: 6rem;
-        margin-top: 50px;
-        background-color: hsla(133, 69%, 5%, 0.384)  ;
-        margin: 100px;
-        border-radius: 15px;
-        margin-left: 350px;
-        margin-bottom: -80px;
-        
-    
+            color: white;
+            border: 2px solid hsla(0, 0%, 3%, 0.384);
+            font-size: 3rem;
+            margin-top: 70px;
+             background-color: hsla(133, 69%, 5%, 0.384); 
+            border-radius: 15px;
+            margin-bottom: 35px;
+            padding: 15px;
+            box-shadow: transparent;
+            box-shadow: 5px -5px 5px 5px lightslategrey;
     }
 
 .services{
 
     margin-top: 2em;
-    margin-bottom: 2em;
-    
+    margin-bottom: 2em;  
 }
 
  .content{
@@ -111,14 +50,25 @@ header{
     flex-direction: row;
 }
 .content__item{
-    padding: 100px 20px;
+    padding: 40px 15px;
     background: rgb(65, 47, 47);
     color: white;
     max-width: 390px;
     margin: 20px;
     text-align: center;
     transition: 00.5s;
+    font-family: sans-serif;
+    font-size: 16px;
+    text-indent: 10px;
+    line-height: 1.5;
+    letter-spacing: 1px;
 
+}
+.content__item h2{
+    font-size: 25px;
+    font-weight: bolder;
+    padding: 12px;
+    font-family: 'Times New Roman', Times, serif;
 }
 .content__item:hover{
     background: #79b494;
@@ -128,82 +78,66 @@ header{
     max-width: 80px;
     
 }
-.content__item h2{
-    font-size: 20px;
-    font-weight: 600;
-}
-.next{
-    color: white;
-    width: 100%;
-    text-align: center;
+.next {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    margin-bottom: 75px;
-    font-size: 2rem;
+    color: white;
+    font-size: 25px;
+   
 }
-.next h3{
+h3.next-title {
     border: 2px solid rgb(54, 53, 53);
-    margin-left:6em;
-    margin-top: 1px;
-    font-size: 80px;
-    margin-right: 1em;
-    background-color: rgba(20, 24, 23, 0.226);
+    padding: 15px 25px 15px 35px;
+
+    background-color: rgba(20, 24, 23, 0.227);
     border-radius: 155px;
-    margin-right: 6em;
+    margin: 15px;
+    font-size: 1.3em;
 }
 .next a{
     text-decoration: none;
 }
 .next a:visited{
-    color: rgb(124, 124, 168);
+    color: #0fe5e5;
 }
-.next a:hover{
-    color: rgb(0, 225, 255);
-}
-
-
-
-footer{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    color: white;
-    margin-top: 2rem;
-
+a.next:hover{
+    color: red;
 }
 
-.Social-media h3{
-    font-size: 25px;
-    padding-left: 21px;
-    color: rgb(11, 176, 182);
+@media (max-width:427px)
+{
+    .content{
+        flex-direction: column;
+    }
+    .next{
+        font-size: 1.2rem;
+        margin-bottom: 10px;
+    }
+    
+    .service-title{
+        font-size: 2rem;
+    }
+    .service-description{
+        font-size: 16px;
+    }
+    .content__item{
+        font-size: 14px;
+    }
+  
+
     
 }
-.social-media__icons{
- 
-  display: flex;
- justify-content: space-around;
- align-items: center;
- 
+@media (max-width:768px) and (min-width:426px){
+    .service-title{
+        margin-top: 150px;
+        
+    }
+    .next h3{
+        margin-left: 0em;
+        width: 100%;
+    }
+   
+    
 }
-.social-media__icons a{
-    padding: 9px;
-}
-.social-media__icons a:visited{
-    color: rgba(127, 158, 55, 0.219);
-}
-.social-media__icons a:hover{
-    color: blue;
-}
-.social-media__icons a:active{
-    color: green;
-}
-.email h3{
-    padding-left: 2em;
-    padding-bottom: 5px;
-    font-size: 1.4rem;
-    color: rgb(11, 176, 182);
-}
-.phone-number h3{
-    color:rgb(11, 176, 182); ;
-    padding-bottom: 5px;
-}
-
