--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,116 +1,51 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-body{
-    min-height: 100vh; 
-    height: 100%;
-    margin: auto;  
-    background-color:#232A34 ;
-    background-size: cover;
 
-    /* #040706     #1F2235      #232A34 */
-
-}
-
-header{
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 22px;
-    width: 100%;
-    background-color: black;
+     .Gallery{
+        
+        display: inline-flexbox;
+        text-align: center;
+      width: 30%;
+        margin: auto;
+        color: white;
+        border: 2px solid hsla(0, 0%, 3%, 0.384);
+        font-size: 3rem;
+        margin-top: 50px;
+        background-color: hsla(133, 69%, 5%, 0.384);
+        border-radius: 15px;
+        padding: 15px;
+        box-shadow: transparent;
+        box-shadow: 5px -5px 5px 5px lightslategrey;
+    }
+    .next {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        color: white;
+        font-size: 25px;
+       
+    }
+    h3.next-title {
+        border: 2px solid rgb(54, 53, 53);
+        padding: 15px 25px 15px 35px;
     
-    
-}
-
-.logo{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 1.9rem;
-    color: white;
-    cursor: pointer;
-    text-transform: capitalize;
-    font-weight: 700;
-    letter-spacing: 2px;
-    
-
-}
-
-
-.nav__bar{
-    list-style-type: none;
-   
-
-}
-.nav__bar--list{
-    display: inline;
-}
-.nav__bar--list a{
-    text-decoration: none;
-    padding: 0 1.4rem;
-    font-size: 1.8rem;
-    color: white;
-
-}
-.nav__bar--list a:hover{
-    color: rgb(218, 106, 106);
-}
-.Gallery{
-    color: white;
-   
-    text-align: center;
-    width: 50%;
-    padding-top: 10px;
-    height: 150px;
-    border: 2px solid hsla(231, 70%, 5%, 0.384) ;
-    font-size: 6rem;
-    margin-top: 50px;
-    background-color: hsla(231, 70%, 5%, 0.384)  ;
-    margin: 100px;
-    border-radius: 15px;
-    margin-left: 350px;
-    margin-bottom: -80px;
-    
-
-}
-
-.next{
-    color: white;
-    width: 100%;
-    text-align: center;
-    align-items: center;
-   
-    font-size: 2rem;
-}
-.next h3{
-    border: 2px solid rgb(54, 53, 53);
-    margin-left:6em;
-    margin-top: 10px;
-    font-size: 85px;
-    margin-right: 1em;
-    background-color: rgba(20, 24, 23, 0.226);
-    border-radius: 155px;
-    margin-right: 6em;
-    margin-bottom: 85px;
-}
-.next a{
-    text-decoration: none;
-}
-.next a:visited{
-    color: rgba(0, 217, 255, 0.589);
-}
-.next a:hover{
-    color: red;
-}
-
+        background-color: rgba(20, 24, 23, 0.227);
+        border-radius: 155px;
+        margin: 15px;
+        font-size: 1.9em;
+    }
+    .next a{
+        text-decoration: none;
+    }
+    .next a:visited{
+        color: #0fe5e5;
+    }
+    .next a:hover{
+        color: rgb(255, 72, 0);
+    }
 
 .photo{
-    margin-top: 7rem;
-    padding: 20px;
+    margin-top: 2rem;
+    padding: 50px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 50px;
@@ -132,55 +67,50 @@ figcaption{
     padding: 20px;
     border-radius: 15px;
     color: white;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: monospace;
+    font-size: 18px;
+    word-spacing: 2px;
 }
-
-
-footer{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    color: white;
-    margin-top: 2rem;
-
-}
-
-.Social-media h3{
-    font-size: 25px;
-    padding-left: 21px;
-    color: rgb(11, 176, 182);
+ .pic:hover{
     
-}
-.social-media__icons{
- 
-  display: flex;
- justify-content: space-around;
- align-items: center;
- 
-}
-.social-media__icons a{
-    padding: 9px;
-}
-.social-media__icons a:visited{
-    color: rgba(127, 158, 55, 0.219);
-}
-.social-media__icons a:hover{
-    color: blue;
-}
-.social-media__icons a:active{
-    color: green;
-}
-.email h3{
-    padding-left: 2em;
-    padding-bottom: 5px;
-    font-size: 1.4rem;
-    color: rgb(11, 176, 182);
-}
-.phone-number h3{
-    color:rgb(11, 176, 182); ;
-    padding-bottom: 5px;
-}
-img:hover{
     width: 110%;
-    height: auto;
+    cursor: pointer;
+    transition: all 0.5s ease 0s;
+    box-shadow: 5px 2px 3px rgba(255, 255, 255, 0.459);
+}
+@media (min-width:460px) and (max-width:1015px){
+    .Gallery{
+        width: 40%;
+
+    }
+    figcaption{
+        font-size: 15px;
+    }
+    .next{
+        font-size: 20px;
+    }
+}
+@media  (max-width:450px){
+    .Gallery{
+        width: 80%;
+        font-size: 2rem;
+    }
+    .photo{
+        grid-template-columns: 1fr;
+        grid-gap: 45px;
+    }
+    figcaption{
+        font-size: 16px;
+        margin-top: 3px;
+    }
+    p{
+        font-size: 20px;
+        padding: 5px;
+        text-align: center;
+    }
+    h3.next-title {
+      
+        margin: 5px;
+        font-size: 1.1em;
+    }
 }
