--- a/css/resume.css
+++ b/css/resume.css
@@ -1,145 +1,193 @@
 
-.logo{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 1.9rem;
-    color: white;
-    cursor: pointer;
-    text-transform: capitalize;
-    font-weight: 700;
-    letter-spacing: 2px;
-    
-
-}
-header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px;
-}
-
-.nav__bar{
-    list-style-type: none;
-   
-
-}
-.nav__bar--list{
-    display: inline;
-}
-.nav__bar--list a{
-    text-decoration: none;
-    padding: 0 1.4rem;
-    font-size: 1.8rem;
-    color: white;
-
-}
-.nav__bar--list a:hover{
-    color: rgb(218, 106, 106);
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-body{
-    margin: 0;
-   
-    background-color: #232A34;
-
-}
 main{
     display: grid;
-    grid-template-columns: 45% 50%;
-    grid-template-rows: 55% 45%;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-gap: 55px;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1;
     padding: 25px;
-    grid-template-areas: 
-    "tables certificates"
-    "articles skills"
+    margin-top: 50px;   
 }
-.headers{
-    grid-area: "headers";
-    
-    grid-column: 1/3;
-}
+
 .tables{
-    grid-area: "tables";
+   
+        grid-column: span 2;
+        grid-row: span 2;
+        margin: auto;
+        padding: 15px;
+        grid-row-start: 1;
+        grid-row-end: 3;
+        background-color: hsla(231, 70%, 5%, 0.384);
+        border-radius: 25px;
+        font-family: sans-serif;
+        box-shadow: -10px -15px 5px rgb(61, 91, 116);
+        
+        
+
 
 }
 .certificates{
-    grid-area: "certificates";
+    grid-column: span 3;
+    grid-row: span 3;
+   
+    
+    margin-left: 2em;
+    border-radius: 15px;
    
     
 }
 .articles{
-    grid-area: "articles";
+   grid-column: span 2;
+   grid-row: span 2;
+   
+   text-align: center;
+   border-radius: 15px;
+   grid-row-end: 5;
 
 }
-.footers{
-    grid-area: "footers";
- 
-    grid-column: 1/3;
-}
-.skills{
-    grid-area: "skills";
-  
+
+.skills-bar{
+   grid-column: span 3;
+   grid-row: span 1;
+   padding: 15px 30px;
+   margin-left: 2em;
+   width: 80%;
+   background-color: hsla(231, 70%, 5%, 0.384);
+    border-radius: 25px;
+    font-family: sans-serif;
+    box-shadow: -10px -15px 5px rgb(61, 91, 116);
+    color: white;
+    text-transform: uppercase;
+    
     
 }
+.bar{
+    margin: 20px 0;
+   
+}
+.info{
+    margin-bottom: 5px;
+}
+
+.progress-line{
+    width: 95%;
+    background-color: white;
+    height: 10px;
+    border-radius: 15px;
+    position: relative;
+}
+.skills-title{
+    text-align: center;
+    padding: 5px;
+    font-size: 2em
+}
+
+.progress-html{
+    background-color: rgb(50, 50, 255);
+    width: 80%;
+    height: 10px;
+    position: absolute;
+    border-radius: 15px;
+   
+
+}
+.progress-html span{
+    content: "80%";
+    right: 0;
+    top: -10px;
+    color: white;
+    font-size: 12px;
+    background-color: black;
+}
+
+.progress-java{
+    background-color: blue;
+    width: 70%;
+    height: 10px;
+    position: absolute;
+    border-radius: 25px;
+}
+
+.progress-python{
+    background-color: blue;
+    width: 80%;
+    height: 10px;
+    position: absolute;
+    border-radius: 25px;
+}
+
+.progress-c{
+    background-color: blue;
+    width: 50%;
+    height: 10px;
+    position: absolute;
+    border-radius: 25px;
+}
+
+.progress-editing{
+    background-color: blue;
+    width: 90%;
+    height: 10px;
+    position: absolute;
+    border-radius: 25px;
+}
+
+
 .certificates{
     display: grid;
+    grid-template-rows: 1fr 1fr ;
+    grid-gap: 49px;
 
 
 }
 .certificates_a{
-    color: white;
+    grid-row: span 1;
+    font-family: 'Times New Roman', Times, serif;
+    padding: 15px 20px 5px;
+    border-radius: 15px;
+    font-size: 15px;
+    width: 80%;
 
     
 }
 .certificates_a h2{
-    font-size: 3rem;
+    font-size: 30px;
+    padding: 5px;
+    color: white;
+    
+
+
+
   
 }
 
 
 .certificates_b-text2{
-    font-size: 1.5rem;
+    font-size: 15px;
 }
 .certificates_b-text{
-    font-size: 1.5rem;
+    font-size: 15px;
 }
 .certificates_b{
     color: white;
+    grid-row: span 1;
+    background-color: darkgoldenrod;
+    font-family: 'Times New Roman', Times, serif;
+    padding: 15px 20px 5px;
+    border-radius: 15px;
+    font-size: 15px;
+    width: 80%;
   
     
 }
-.certificates{
-    margin-left: 50px;
-}
-.skills h2{
-color: gold;
-}
 
-table{
-    width: 95%;
-    height: 50%;
-    position: relative;
-    left:5%;
-    top: 15%;
-    
 
-}
+
 .tables h2{
 text-align: center;
-margin-bottom: -100px;
+
 color: white;
-font-size: 4rem;
+font-size:2em;
+padding: 10px;
 
 
 
@@ -147,138 +195,135 @@ font-size: 4rem;
 
 
 table,th,td{
-    border: 2px solid whitesmoke;
-    padding: 1.5rem;
+    border: 2px solid rgba(245, 245, 245, 0.411);
+    
+    padding: 15px;
     border-collapse: collapse;
 
 }
 th{
-    background-color: green;
-    color: white;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    padding: 3rem;
-    font-size: 2rem;
     
+    
+        color: white;
+        font-family: monospace;
+        padding: 19px;
+        font-size: 24px;
+        text-transform: capitalize;
+   
     
 }
 td{
-    padding: 25px 25px;
+   
     font-family: 'Times New Roman', Times, serif;
     text-align: center;
     color: white;
-    font-size: 1.4rem;}
-.para{
-    margin-top: 13rem;
-    margin-left: 1rem;
-    color: white;
-    font-size: 1.6rem;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
+    
+    font-size: 18px;}
+
 
 tr:hover{
-    background-color: wheat;
+    background-color: #3E5972;
     cursor: pointer;
-}
-.articles_adis{
-    width: 98%;
-
-
-}
-.articles h2{
-    color: white;
-    font-size: 2.7rem;
-  
-    margin-top: -50px;
-}
-
-
-img{
-    width: 60%;
-
-    
-}
-
-
-.articles--text{
-    
-    color: white;
-    font-size: 1.3rem;
-    text-align: justify;
-    text-indent: 500px;
-    font-style: bold;
-
-    
-}
-.skills h2{
-    font-size: 2rem;
-    margin-left: 1rem;
-}
-.skills_describes{
    
-    color: white;
-    font-size: 1.5rem;
+}
+
+.articles_adis{
+    width: 78%;
+
+
+}
+
+
+
+ figure img{
+    width: 40%;
+    padding-left: 15px;
+
     
 }
-.skills__progress{
-    margin-left: 16%;
-
+.articles{
   
+    margin: auto;
+    padding: 10px;
+    letter-spacing: 0.4px;
+    line-height: 25px;
+   
+    background-color: hsla(231, 70%, 5%, 0.384);
+    border-radius: 25px;
+    font-family: sans-serif;
+    box-shadow: -10px -15px 5px rgb(61, 91, 116);
+}
 
-}
-progress{
-    font-size: 40px;
-}
-.one{
-    font-size: 2.5rem;
-    color: greenyellow;
+
+.articles--text {
+    
+    color: white;
+    font-size: 16px;
+   
+  
+    
+    font-style: bold;
+    
+
     
 }
-.skills__progress-des{
+.certificates_a{
+    
+  
+    
     color: white;
-    font-size: 1.6rem;
-    margin-left: -40px;
+    font-family: sans-serif;
+    border-radius: 25px;
+    background-color: hsla(231, 70%, 5%, 0.384);
+   
+  
+    font-size: 18px;
+    line-height: 1.5;
+    text-indent: 50px;
+    letter-spacing: 1.5px;
+    box-shadow: -10px -15px 5px rgba(61, 91, 116, 0.336)
+
 }
-
-
-
-
-footer{     
-    justify-content: space-between;
-    align-items: center; 
-    padding: 0px;
-    padding-bottom: 1000px;
-    margin: 0px;
+.certificates_b{
+    
+  
+    
     color: white;
-    position: relative;
-    top: 120px;
-    left: 0px;
-    bottom: 100%; 
+    font-family: sans-serif;
+    border-radius: 25px;
+    background-color: hsla(231, 70%, 5%, 0.384);
+   
+  
+    font-size: 18px;
+    line-height: 1.5;
+    text-indent: 50px;
+    letter-spacing: 1.5px;
+    box-shadow: -10px -15px 5px rgba(61, 91, 116, 0.336)
+
 }
-.phone-number{
-    padding-top: 100px;
-    margin-top: 1px;
-    padding-bottom: -100px;
-    margin-bottom: -100px;
+figure p {
+    color: white;
+    font-size: 24px;
+    text-transform: uppercase;
+    padding: 15px;
 }
-.email{
-    padding-top: 100px;
-    margin-top: 1px;
-    padding-bottom: -100px;
-    margin-bottom: -100px;
-}
-.Social-media{
-    padding-top: 100px;
-    margin-top: 1px;
-    padding-bottom: -100px;
-    margin-bottom: -100px;
-}
-.copyright{
-    padding-top: 100px;
-    margin-top: 1px;
-    padding-bottom: -100px;
-    margin-bottom: -100px;
-}
-footer{
-display: flex;
-padding: 90px;
+@media(min-width:320px) and (max-width:500px){
+    main{
+        display: grid;
+        grid-template-columns: 1fr;
+        width: 110%;
+    }
+    .tables{
+        width: 90%;
+        
+    }
+    td{
+        font-size: 13px;
+    }
+    th{
+        font-size: 15px;
+    }
+    .tables-title{
+        font-size: 20px;
+    }
 }
