--- a/css/video_gallery.css
+++ b/css/video_gallery.css
@@ -1,61 +1,4 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-body{
-    min-height: 100vh; 
-    height: 100%;
-    margin: auto;  
-    background-color:#232A34 ;
-    background-size: cover;
 
-    /* #040706     #1F2235      #232A34 */
-
-}
-
-header{
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 22px;
-    width: 100%;
-    background-color: black;
-    
-    
-}
-
-.logo{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 1.9rem;
-    color: white;
-    cursor: pointer;
-    text-transform: capitalize;
-    font-weight: 700;
-    letter-spacing: 2px;
-    
-
-}
-
-
-.nav__bar{
-    list-style-type: none;
-   
-
-}
-.nav__bar--list{
-    display: inline;
-}
-.nav__bar--list a{
-    text-decoration: none;
-    padding: 0 1.4rem;
-    font-size: 1.8rem;
-    color: white;
-
-}
  main{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -114,7 +57,7 @@ video{
     letter-spacing: 1px;
 }
 
-.title{
+/* .title{
     color: white;
    
     text-align: center;
@@ -131,6 +74,21 @@ video{
     margin-bottom: -80px;
     
 
+} */
+.title{
+    display: inline-flexbox;
+    text-align: center;
+    width: 30%;
+    margin: auto;
+    color: white;
+    border: 2px solid hsla(0, 0%, 3%, 0.384);
+    font-size: 3rem;
+    margin-top: 50px;
+    background-color: hsla(133, 69%, 5%, 0.384);
+    border-radius: 15px;
+    padding: 15px;
+    box-shadow: transparent;
+    box-shadow: 5px -5px 5px 5px lightslategrey;
 }
 
 .video_gallery{
@@ -142,59 +100,6 @@ video{
     grid-column: span 1;
 }
 
-footer{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    color: white;
-    margin-top: 10rem;
-
-}
-
-.Social-media h3{
-    font-size: 25px;
-    padding-left: 21px;
-    color: rgb(11, 176, 182);
-    
-}
-.social-media__icons{
- 
-  display: flex;
- justify-content: space-around;
- align-items: center;
- 
-}
-.icon{
-    padding: 1px;
-    background-color: whitesmoke;
-    border-radius: 15px;
-}
-.social-media__icons a{
-    padding: 9px;
-}
-.social-media__icons a:visited{
-    color: rgba(127, 158, 55, 0.219);
-}
-.social-media__icons a:hover{
-    color: blue;
-}
-.social-media__icons a:active{
-    color: green;
-}
-.email h3{
-    padding-left: 2em;
-    padding-bottom: 5px;
-    font-size: 1.4rem;
-    color: rgb(11, 176, 182);
-}
-.phone-number h3{
-    color:rgb(11, 176, 182); ;
-    padding-bottom: 5px;
-}
-img:hover{
-    width: 110%;
-    height: auto;
-}
 
 
 @media (max-width:360px) {
