home page responsive style

--- a/css/home.css
+++ b/css/home.css
@@ -1,52 +1,41 @@
-.header{
-    position: static;
-}
+
 .picture{
     display: flex;
     width: 22%;
     float: right;
     margin-right:5%;
-    margin-top: 69px;
+    margin-top: 9px;
 }
-.picture img{
-    width: 10%;
-}
-
 .Introduction {
     display: flex;
     align-items: center;
     padding-bottom: 20px;
-
 }
-.Introduction__content{
-    margin-top: 60px;
+.Introduction__content {
+    margin-top: 185px;
 }
-
-.Introduction__content h2{
-    font-size: 3em;
+.Introduction__content--holder {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
     color: white;
-    font-weight: 500;
-    line-height: 1em;
-    margin-top: 130px;
-    text-indent: 50px;
+}
+.Intorduction__content--holder--text {
     padding: 10px;
-    text-align: center;
-   
-    }
-.Introduction__content h2 span{
-        font-size: 1.8em;
-        font-weight: 600;
-        padding-left: 15px;
-        font-family: monospace;
-        
-    }
+    font-size: 3em;
+    text-transform: capitalize;
+    font-family: monospace;
+}
+.Intorduction__content--holder--heading {
+    padding: 5px;
+    font-size: 4em;
+    font-family: serif;
+}
     .Introduction__content--describe{
-    
     margin-top: 30px;
-    
     padding: 15px;
     font-size: 20px;
-    /* margin-bottom: 20px; */
     line-height: 1.5;
     width: 75%;
     margin: auto;
@@ -55,31 +44,13 @@
     text-transform: full-width;
     color: white;
         
-    }
-.Introduction__about{
-    padding-top: 1rem;
-    position: absolute;
-    
-    
-}
-.Introduction__about p{
-    
-    color: white;
-    text-indent: 50px;
-    letter-spacing: 1.5px;
-    text-transform: full-width;
-    padding: 2% 0%;
-    font-size: 1px;
-    
-    line-height: 1.2;
-    display: flex;
-}
+    } 
+
 .Introduction__about--button:visited{
     background: rgb(28, 28, 145);
 
 }
 .Introduction__about--button{
-       
         position: relative;
         background: rgb(28, 28, 145);
         display: inline-block;
@@ -93,67 +64,81 @@
         letter-spacing: 2px;
         font-weight: 500;
         border-radius: 20px;
-         
-        
-       
     }
-    body{
-        position: relative;
-    }
+    
 
     .footer{
         margin-top: 8.7em;
-        padding-left: 10px;
+        padding-left: 1px;
     }
 
-    @media  (max-width:426px){
-        .header{
-            position: static;
-        }
-         img.picture {
-            width: 70%;
+    @media  (max-width:511px){
+         .picture {
+            width: 60%;
             margin: 30px auto;
             float: none;
          }
          .Introduction__content{
-             margin-top: 10px;
+             margin-top: -5px;
          }
-        
-         .Introduction__content h2 {
-            font-size: 2.1em;
-            color: white;
-            font-weight: 500;
-            line-height: 1em;
-            text-align: center;
-            margin-top: 0px;
-            text-indent: 0px;
-            
-        }
-        
-        .Introduction__content h2 span {
-            font-size: 1.5em;
-            font-weight: 100;
-            display: block;
-            padding: 20px 0;
-            margin-bottom: 50px;
-
-        }
+         .Introduction__content--holder{
+             display: flex;
+             flex-direction: column;
+             font-size: 13px;
+             margin-bottom: 15px;
+         }
         .Introduction__content--describe{
             font-size: 18px;
+            background-color: aqua;
+            border-radius: 15px;
+            width: 90%;
+            background-color: hsla(231, 70%, 5%, 0.384);
+            box-shadow: -5px -5px 5px rgba(61, 91, 116, 0.336);
         }
         .Introduction__about--button{
             margin-top: 25px;
-            
         }
          
     } 
-   
+    @media(max-width:390px){
+        .Introduction__content--holder{
+            font-size: 10px;
+        }
+    }
+   @media(min-width:511px) and (max-width:675px){
+       .picture{
+           width: 40%;
+       }
+       .Introduction__content{
+           margin-top: 70px;
+       }
+       .Introduction__content--holder{
+           flex-direction: column;
+           font-size: 10px;
+        
+       }
+       .Introduction__content--describe{
+        font-size: 15px;
+        
+        border-radius: 15px;
+        width: 90%;
+        background-color: hsla(231, 70%, 5%, 0.384);
+        box-shadow: -10px -15px 5px rgba(61, 91, 116, 0.336);
+    }
+       
+
+   }
     
-    @media (min-width:510px) and (max-width:890px){
+    @media (min-width:676px) and (max-width:990px){
         .picture{
-            margin-top: 10px;
-            width: 65%;
+            margin-top: 20px;
+            width: 45%;
             
+        }
+        .Introduction__content--holder{
+            display: flex;
+            flex-direction: column;
+            font-size: 12px;
         }
         .Introduction__about--button{
             margin-top: 10px;
@@ -162,36 +147,18 @@
         .emails {
             margin-left: 90px;
         }
+        .Introduction__content--describe{
+           
+            
+            border-radius: 15px;
+            width: 90%;
+            background-color: hsla(231, 70%, 5%, 0.384);
+            box-shadow: -10px -15px 5px rgba(61, 91, 116, 0.336);
+        }
         
        
-        
-        .Introduction__content h2 {
-           display: block;
-        }
-        .Introduction__content h2 span{
-            font-size: 1em;
-            position: relative;
-            bottom: 18px;
-            
-            top: 15px;
-        }
-        .Introduction__content--describe p{
-            font-size: 1px;
-        }
+       
         
     }
-    @media  (max-width:510px){
-        .header{
-            position: static;
-        }
-         img.picture {
-            width: 60%;
-            margin: 30px auto;
-            float: none;
-         }
-         .Introduction__content{
-            margin-top: 10px;
-        }
-        }
     
   
