--- a/css/combine.css
+++ b/css/combine.css
@@ -13,7 +13,7 @@ body{
     /* #040706     #1F2235      #232A34 */
 }
 
-header{
+.header{
     
     display: flex;
     flex-wrap: wrap;
@@ -73,7 +73,7 @@ header{
 
 
 /* here is the footer */
-footer{
+.footer{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -105,6 +105,9 @@ footer{
     background-color:rgba(54, 172, 99, 0.719); 
     border-radius: 15px;
 }
+.icon:hover{
+    background-color: aqua;
+}
 .social-media__icons a{
     padding: 10px;
 }
@@ -119,13 +122,11 @@ footer{
     font-size: 19px;
 }
 .phone-number--h3{
-    font-size: 25px;
+    font-size: 20px;
     color: #00ffffb4;
     padding-bottom: 5px;
 }
-img:hover{
-    background-color:rgb(0, 225, 255);
-}
+
 
 
 @media (min-width:769px) and (max-width:984px){
