--- a/css/about.css
+++ b/css/about.css
@@ -158,10 +158,8 @@ font-size: 20px;
     }
 }
 
-@media(min-width:473px) and (max-width:525px){
-    .header{
-        width: 10%;
-    }
+@media(min-width:403px) and (max-width:525px){
+   
     .main{
         display: block;
         grid-template-columns: 1fr;
@@ -204,24 +202,99 @@ font-size: 20px;
         display: flex;
         padding: 10px;
         margin-top: 15px;
-        width: 150%;
+        width: 18vh;
         margin-left: -3em;
     }
 }
-@media (max-width:320px){
+@media (max-width:402px)
+{
+    .header{
+        width: 130%;
+    }
     .About-me__intro--para{
-        width: 80%;
+        width: 100%;
         height: 280px;
-        font-size: 13px;
-        margin-left: 1px;
+        font-size: 16px;
+        margin-left: 15px;
         margin-top: 15px;
         font-family: sans-serif;
 
     }
+    .main{
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-gap: 50px;
+    }
+    .horizontal{
+        margin-left: 50px;
+    }
+    .About-me__intro--h2 {
+        text-align: center;
+        width: 50%;
+        font-size: 1.8em;
+        padding: 10px;
+        margin-top: 15px;
+        margin-left: 25%;
+    }
+    .imagess{
+        width: 100%;
+        margin: auto;
+        
+    }
     
+    .About-me__intro--head{
+        font-size: 1.4rem;
+        margin-left: 0px;
+        padding: 10px;
+    }
     
+    .my-skills__sub--item {
+        
+        padding-top: 10px;
+        font-size: 19px;
+        margin-left: -150px;
+    }
+    .About-me__intro--para{
+        width: 95%;
+        padding: 10px;
+    }
+    .More {
+      
+        font-size: 2.2rem;
+        display: flex;
+        padding: 10px;
+        margin-top: 15px;
+        width: 18vh;
+        margin-left: -3em;
+    }
 }
-
-
+@media(min-width:525px) and (max-width:760px){
+    .main{
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+    .imagess{
+        width: 80%;
+    }
+    .About-me__intro--h2{
+        width: 40vh;
+        font-size: 2.5em;
+        padding: 10px;
+        margin-top: 10px;
+        text-align: center;
+    }
+    .horizontal{
+        width: 70vh;
+       margin-left: 10vh;
+        text-align: center;
+    }
+    .About-me__intro--head{
+        margin-left: 0;
+        font-size: 1.5em;
+    }
+    .More{
+        width: 25vh;
+    }
+}
 
 
